more color corrections for dark mode & add linecount

--- a/src/addons/conversion/style.css
+++ b/src/addons/conversion/style.css
@@ -58,3 +58,9 @@
     monospace;
   letter-spacing: -0.5px;
 }
+
+.darkmode .conversionNode{
+  background: #183525;
+  border: 1px solid #105400;
+  color: #479832;
+}
