--- a/src/components/Handy/style.css
+++ b/src/components/Handy/style.css
@@ -30,105 +30,8 @@
   background: transparent;
 }
 
-.InfoItem {
-  color: #555;
-  position: relative;
-}
-
-.darkmode .InfoItem {
-  color: #ddd;
-}
-
 div.HandyInner > div:nth-child(1) > h5 {
   padding-top: 0px;
   margin-top: 0px;
 
-}
-
-.InfoItem h5 {
-  font-size: 0.75rem;
-  font-weight: 600;
-  color: #444;
-  text-transform: uppercase;
-  margin-bottom: 3px;
-}
-
-.darkmode .InfoItem h5 {
-  color: #aaa;
-}
-
-.InfoItem p {
-  font-size: 0.85em;
-}
-
-.InfoItem .InfoConfigure {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  cursor: pointer;
-  opacity: 0;
-  transform: rotate(0deg);
-  transition: 300ms all;
-  transition-delay: 200ms;
-}
-
-.InfoItem:hover .InfoConfigure {
-  opacity: 0.8;
-  transform: rotate(180deg);
-}
-
-.colorCode {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.colorNode {
-  position: relative;
-  border-radius: 100%;
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(0,0,0,0.1);
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-.colorNode:hover .colorInner, .active .colorInner {
-  position: absolute;
-  border-radius: 100%;
-  left: 2px;
-  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.3), inset 0 0 2px rgba(0,0,0,0.3);
-  top: 2px;
-  background: transparent;
-  border: 2px solid #fff;
-  width: 8px;
-  height: 8px;
-}
-
-.colorNode.white {
-  background: #ffffff;
-}
-
-.colorNode.white .colorInner{
-  border-color: #fafafa;
-}
-
-.colorNode.yellow {
-  background: #f6ce5a;
-}
-
-.colorNode.purple {
-  background: #c885da;
-}
-
-.colorNode.pink {
-  background: #f05c8a;
-}
-
-.colorNode.green {
-  background: #7cc868;
-}
-
-.colorNode.blue {
-  background: #68aff1;
 }
